# mart-projects

./: README - Copy.md  README.md
01-basic-mart/: README.md
02-mart-fastapi-postgresql/: compose.yaml
03-mart-db-uuid/: compose.yaml
04-mart-kafka/mart/: pyproject.toml
05-postgres-inside-kafka-json/: README.md  compose.yaml
09-smtp-stripe/: compose.yaml
09-smtp-stripe/mail/: pyproject.toml
09-smtp-stripe/payments/: pyproject.toml
10-mart-efficient-code/: .gitignore  MyReadme.md  Readme.md  compose.yaml  gpt-gemini.md  proto.md  topic.txt  topics.txt
10-mart-efficient-code/auth/: .env
10-mart-efficient-code/auth-company/: .env  Dockerfile  alembic.ini  pyproject.toml
10-mart-efficient-code/auth-user/: .env  Dockerfile  pyproject.toml
10-mart-efficient-code/email/: .env  Dockerfile  README.md  pyproject.toml
10-mart-efficient-code/email/app/: main.py
10-mart-efficient-code/email/app/config/: database.py  email.py  security.py  settings.py
10-mart-efficient-code/email/app/models/: company.py  email.py  inventory.py  order.py  product.py  user.py
10-mart-efficient-code/email/app/protobuf/: all_proto.proto  all_proto_pb2.py  company_pb2.py  email.proto  email_content.proto  email_content_pb2.py  email_pb2.py  user.proto  user_token_pb2.py
10-mart-efficient-code/email/app/schemas/: user.py
10-mart-efficient-code/email/app/schemas/protos/: all_proto_pb2.py  customs.proto
10-mart-efficient-code/email/app/services/kafka/: consumer.py  handle_topics.py
10-mart-efficient-code/email/app/utils/: fetcher.py  proto_utils.py
10-mart-efficient-code/product/: .env  .env copy  Dockerfile  pyproject.toml
10-mart-efficient-code/product/app/: main.py
10-mart-efficient-code/product/app/config/: database.py  security.py  settings.py
10-mart-efficient-code/product/app/models/: all_models.py  product.py
10-mart-efficient-code/product/app/routes/: product.py  user.py
10-mart-efficient-code/product/app/schemas/: product.py
10-mart-efficient-code/product/app/schemas/protos/: all_proto.proto  all_proto_pb2.py  customs_pb2.py
10-mart-efficient-code/product/app/services/kafka/: consumer.py  handle_topics.py
10-mart-efficient-code/product/app/utils/: check_auth.py  proto_utils.py
4-mart-kafka/: README.md  compose.yaml
7-basic-mart-with-auth/: compose.yaml
8-auth-proto-kafka-db/: compose.yaml
newenv/: pyproject.toml
(+132 files in other folders)
