[tool.poetry]
name = "newenv"
version = "0.1.0"
description = ""
authors = ["Shoaib <iamshoaibxyz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
psycopg = {extras = ["binary"], version = "^3.2.1"}
resend = "^2.2.0"
aiokafka = "^0.11.0"
protobuf = "^5.27.2"
fastapi-mail = "^1.4.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pyjwt = "^2.8.0"
httpx = "^0.27.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
