[tool.poetry]
name = "mail"
version = "0.1.0"
description = ""
authors = ["Shoaib <iamshoaibxyz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
python-dotenv = "^1.0.1"
fastapi-mail = "^1.4.1"
jinja2 = "^3.1.4"
sqlmodel = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
